syntax = "proto3";

// option go_package = ".;pb";
option go_package = ".;common";

service AgentService {
    rpc DraftPlayer(GameStateDbPath) returns (DraftSelection) {}
    rpc SubmitFantasyActions(GameStateDbPath) returns (AttemptedFantasyActions) {}
    rpc ProposeAddDrop(GameStateDbPath) returns (AddDropSelection) {}
}

message FantasyTeam {
    string id = 1;
    string name = 2;
    string owner = 3;
    uint32 current_waiver_priority = 4;
}

message LeagueSettings {
    uint32 num_teams = 1;
    repeated PlayerSlot slots_per_team = 2;
    bool is_snake_draft = 3;
    uint32 total_rounds = 4;
    float points_per_reception = 5;
    uint32 year = 6;
}

message PlayerSlot {
    string name = 1;
    repeated string allowed_player_positions = 2;
    string assigned_player_id = 3;
    bool allows_any_position = 4;
}

message Player {
    string id = 1;
    string full_name = 2;
    repeated string allowed_positions = 3;
    string professional_team = 4;
    uint32 player_bye_week = 5;
    uint32 rank = 6;
    uint32 tier = 7;
    uint32 position_rank = 8;
    uint32 position_tier = 9;
    PlayerStatus status = 10;
    string gsis_id = 11;
}

message PlayerStatus {
    enum Availability {
        AVAILABLE = 0;
        DRAFTED = 1;
        ON_HOLD = 2;
    }

    Availability availability = 1;
    uint32 pick_chosen = 2;
    string current_fantasy_team_id = 3;
}

message Bot {
    string id = 1;

    enum Source {
        LOCAL = 0;
        REMOTE = 1;
    }

    Source source_type = 2;
    string source_repo_username = 3;
    string source_repo_name = 4;
    string source_path = 5;
    string fantasy_team_id = 6;
    string env_path = 7;
}

message GameState {
    repeated Player players = 1;
    repeated FantasyTeam teams = 2;
    LeagueSettings league_settings = 3;
    string current_bot_team_id = 4;
    uint32 current_draft_pick = 5;
    uint32 current_fantasy_week = 6;
}

message DraftSelection {
    string player_id = 1;
}

message AttemptedFantasyActions {
    repeated AddDropSelection add_drop_selections = 1;
}

message AddDropSelection {
    string player_to_drop_id = 1;
    string player_to_add_id = 2;
}

message GameStateDbPath {
    string db_file_path = 1;
}